--- a/.templates/unbound/service.yml
+++ b/.templates/unbound/service.yml
@@ -1,9 +1,9 @@
-unbound:
-  container_name: unbound
-  image: mvance/unbound:latest
-  ports:
-    - "5353:53/tcp"
-    - "5353:53/udp"
-  volumes:
-    - ./volumes/unbound/a-records.conf:/opt/unbound/etc/unbound/a-records.conf:ro
-  restart: unless-stopped
+  unbound:
+    container_name: unbound
+    image: mvance/unbound-rpi:latest
+    ports:
+      - "5353:53/tcp"
+      - "5353:53/udp"
+    volumes:
+      - ./volumes/unbound/a-records.conf:/opt/unbound/etc/unbound/a-records.conf:ro
+    restart: unless-stopped
