--- a/.templates/unbound/service.yml
+++ b/.templates/unbound/service.yml
@@ -2,8 +2,8 @@
     container_name: unbound
     image: mvance/unbound-rpi:latest
     ports:
-      - "5353:53/tcp"
-      - "5353:53/udp"
+      - "5354:53/tcp"
+      - "5354:53/udp"
     volumes:
-      - ./volumes/unbound/a-records.conf:/opt/unbound/etc/unbound/a-records.conf:ro
+      - ./volumes/unbound/:/opt/unbound/etc/unbound/
     restart: unless-stopped
